--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -30,7 +30,16 @@ We built a BI tool that thinks like an engineering team.
     **Reports are code.** Git diff your analytics. Review changes before deployment. Audit every calculation modification.
   </Card>
   <Card title="C-Level Performance" icon="rocket">
-    **Subsecond queries** on billion-row datasets. Native memory efficiency. Analytics on resource-constrained infrastructure.
+    Achieve **Tens of Millions of Rows per Second** throughput. 
+    The C core executes full-scan analytical queries on billion-row datasets in **under 30 seconds** on standard hardware, leveraging native memory efficiency.
+    <LinkButton
+    href="performance/benchmark"
+    variant="secondary"
+    icon="right-arrow"
+    iconPlacement="end"
+  >
+  See the Test
+</LinkButton>
   </Card>
   <Card title="Deploy Anywhere" icon="seti:folder">
     Lightweight C core (**< 5MB**). Embeddable in any application via **C API or Lua bindings**. Perfect for SaaS, Edge, and IoT.
