--- a/docs/docs/src/content/docs/performance/benchmark.mdx
+++ b/docs/docs/src/content/docs/performance/benchmark.mdx
@@ -34,7 +34,7 @@ The following table summarizes the performance as the dataset size scaled by a f
 
 <Aside>
 
-* **Impact of Memory Hierarchy:** The slight decrease in RPS in Test 5 (approx 32.4) is likely due to the dataset size exceeding the CPU's last-level cache (L3) and requiring more time to fetch data from main RAM. 
+\* **Impact of Memory Hierarchy:** The slight decrease in RPS in Test 5 (approx 32.4) is likely due to the dataset size exceeding the CPU's last-level cache (L3) and requiring more time to fetch data from main RAM. 
 
 This is a normal, physical limitation of computer architecture.
 
