--- a/docs/docs/src/content/docs/docs.mdx
+++ b/docs/docs/src/content/docs/docs.mdx
@@ -8,7 +8,7 @@ hero:
       link: getting-started/getting-started
       icon: right-arrow
     - text: Book a Demo
-      link: https://calendly.com/nstamb6/30min
+      link: https://calendly.com/luniv/30min
       icon: external
       variant: minimal
 ---
