--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
       link: getting-started/getting-started
       icon: right-arrow
     - text: Book a Demo
-      link: https://calendly.com/luniv/30min
+      link: https://calendly.com/luniv/let-s-chat
       icon: external
       variant: secondary
     - text: Created By Luniv Technology
